@@ -30,6 +30,7 @@ my %datasv_pointers :shared;
 my %dataref_svs;
 my %dim_arrays :shared;
 my %types :shared;
+my %badflag :shared;
 my %nbytes :shared;
 my %originating_tid :shared;
 my %file_names :shared;
@@ -94,6 +95,7 @@ sub share_pdls {
 				$dim_arrays{$name} = [$to_store->dims];
 			}
 			$types{$name} = $to_store->get_datatype;
+			$badflag{$name} = $to_store->badflag;
 		}
 		elsif (ref($to_store) eq '') {
 			# A file name, presumably; share via memory mapping
@@ -138,6 +140,7 @@ sub free_pdls {
 			delete $datasv_pointers{$name};
 			delete $dim_arrays{$name};
 			delete $types{$name};
+			delete $badflag{$name};
 			delete $nbytes{$name};
 			delete $originating_tid{$name};
 			push @removed, $name;
@@ -185,6 +188,7 @@ sub retrieve_pdls {
 			# Create the new thinly wrapped ndarray
 			my $new_ndarray = PDL->new_around_datasv($datasv_pointers{$name});
 			$new_ndarray->set_datatype($types{$name});
+			$new_ndarray->badflag($badflag{$name});
 			$new_ndarray->setdims(\@{$dim_arrays{$name}});
 			$new_ndarray->set_donttouchdata($nbytes{$name}); # protect its memory
 			push @to_return, $new_ndarray;
@@ -489,9 +493,7 @@ collection of shared memory that you may need to use for your algorithm:
 
 =for bad
 
-C<share_pdls> does not pay attention to bad values. There is no technical
-reason for this: it simply hadn't occurred to me until I had to write the
-bad-data documentation. Expect it to happen in a forthcoming release. :-)
+C<share_pdls> preserves the badflag on ndarrays.
 
 =head2 share_as
 
@@ -534,9 +536,7 @@ ndarray memory space.
 
 =for bad
 
-C<share_as> does not pay attention to bad values. There is no technical
-reason for this: it simply hadn't occurred to me until I had to write the
-bad-data documentation. Expect it to happen in a forthcoming release. :-)
+C<share_as> preserves the badflag on ndarrays.
 
 =head2 retrieve_pdls
 
@@ -563,9 +563,7 @@ indicating that you probably meant to say something differently.
 
 =for bad
 
-C<retrieve_pdls> does not pay attention to bad values. There is no technical
-reason for this: it simply hadn't occurred to me until I had to write the
-bad-data documentation. Expect it to happen in a forthcoming release. :-)
+C<retrieve_pdls> preserves the badflag on ndarrays.
 
 =head2 free_pdls
 
