@@ -1,3 +1,5 @@
+- preserve badflag across threads
+
 2024-09-06 0.06
 - move XS support functions to PDL 2.091, now pure perl
 
